update movieService